tests/type_safety/cancellation_invalid_variant.stderr
error[E0599]: no variant, associated function, or constant named `Maybe` found for enum `CancellationStatus` in the current scope
  --> tests/type_safety/cancellation_invalid_variant.rs:11:46
   |
11 |     let invalid_cancel = CancellationStatus::Maybe;
   |                                              ^^^^^ variant, associated function, or constant not found in `CancellationStatus`
